test/modules/diten/test_use_chain_resolution.good
test_use_chain_resolution.chpl:2: error: symbol aaa is multiply defined
test_use_chain_resolution.chpl:14: note: also defined here
